# Kernel-Character-Device

./: .gitignore  CMakeLists.txt  README.md  beta.py  data.h  gauss.py  insert.sh  my_module.c  rebuild.sh  remove.sh  universal.py
cmake/: FindKernelHeaders.cmake
